--- a/style.css
+++ b/style.css
@@ -10,5 +10,16 @@ html, body{
   font-family: sans-serif;
   background: #333;
   color: #fff;
-  text-transform: capitalize;;
+  text-transform: capitalize;
+}
+
+#game{
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin: 20px auto 40px;
+  box-shadow: 0 1px 15px #222;
+  overflow: hidden;
+  -webkit-transform: perspective(200px) rotateX(15deg) translateY(-90px);
+          transform: perspective(200px) rotateX(15deg) translateY(-90px);
 }
